refactor ConvertObjectNode ,create custom exception